[metadata]
name = pygua64
version = 0.0.1
author = Li ZongYing
author_email = lizongying@msn.com
description = 64å¦
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lizongying/pygua64
project_urls =
    Bug Tracker = https://github.com/lizongying/pygua64/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src